--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
   "dependencies": {
     "framer-motion": "^10.16.4",
     "react": "^18.2.0",
+    "react-countup": "^6.4.2",
     "react-dom": "^18.2.0",
+    "react-intersection-observer": "^9.5.2",
     "sass": "^1.69.4"
   },
   "devDependencies": {
