--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-countup": "^6.4.2",
     "react-dom": "^18.2.0",
     "react-intersection-observer": "^9.5.2",
+    "react-router-dom": "^6.18.0",
     "sass": "^1.69.4"
   },
   "devDependencies": {
