--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "aos": "^3.0.0-beta.6",
     "framer-motion": "^10.16.4",
     "react": "^18.2.0",
     "react-countup": "^6.4.2",
